--- a/style.css
+++ b/style.css
@@ -543,3 +543,13 @@ h2 {
       background-color: #f1f1f1;
       overflow: hidden;
     }
+
+/*スクロールボックス*/
+
+.scroll-box {
+      width: 300px;
+      height: 150px;
+      overflow: auto;         /* ← スクロールを有効にする */
+      border: 1px solid #ccc; /* 見やすくするための枠線 */
+      padding: 10px;
+    }
